Added function to get keywords by article id

--- a/test_notebook.ipynb
+++ b/test_notebook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,7 @@
        "<module 'main_functions' from 'c:\\\\Users\\\\paolo\\\\Desktop\\\\T3.4.1_KeywordsTranslation\\\\main_functions.py'>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,7 +38,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will start by getting a sample of data (keywords with title and abstract to experiment with). We will do this by using the function get_sample. The function allows you to decide the size of the sample and the languages included in the sample (each language will be equally represented in the sample). Let's try with English, French and Portuguese. Please, check the file data_utils.py if you are interested in more detail about the function. "
+    "Given the ID of an article on the GoTriple platform, the following line of code allows you to get all the data needed (title, abstract, keywords) for the tools to work in the right format. We're taking here an article about French feminism."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Language': 'fr',\n",
+       " 'Id': '10670/1.nxegh0',\n",
+       " 'Keywords': ['anthropologie',\n",
+       "  'France',\n",
+       "  'politique',\n",
+       "  'représentation',\n",
+       "  'image',\n",
+       "  'États-Unis',\n",
+       "  'art plastique',\n",
+       "  'cinéma'],\n",
+       " 'Title_eng': '12- from French kiss to French Feminism, the French cultural exception',\n",
+       " 'Title_or': '12- Du French kiss au French Feminism, l’exception culturelle française',\n",
+       " 'Abstract_eng': 'Most of the images of France originating in the United States are stereotypical, in particular those concerning love and sex. The French kiss and the French lover are seen as cynosures and French woman are often idealised; to such an extent in fact that charm and seduction are regarded as their defining attributes. While trying to define French feminism as presented both by French and American feminists, this paper will attempt to show how images and stereotypes play an important role in dividing the feminist movement and related cultural mores.',\n",
+       " 'Abstract_or': None}"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = data_utils.get_item_by_id('10670%2F1.nxegh0')\n",
+    "data\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the rest of evaluation, we will be dealing with sample of data from different language. We will start by getting a sample of data (keywords with title and abstract to experiment with). We will do this by using the function get_sample. The function allows you to decide the size of the sample and the languages included in the sample (each language will be equally represented in the sample). Let's try with English, French and Portuguese. Please, check the file data_utils.py if you are interested in more detail about the function. "
    ]
   },
   {
