Added function for manual insertion of article data

--- a/test_notebook.ipynb
+++ b/test_notebook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,7 @@
        "<module 'main_functions' from 'c:\\\\Users\\\\paolo\\\\Desktop\\\\T3.4.1_KeywordsTranslation\\\\main_functions.py'>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,12 +38,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The following part of this tutorial focuses on how to extract article data in a suitable format for the translation tool. We will deal with two cases: one in which we have the ID of a GoTriple article and we want to extract data, and the other in which we want to manually enter data for our own article.\n",
     "Given the ID of an article on the GoTriple platform, the following line of code allows you to get all the data needed (title, abstract, keywords) for the tools to work in the right format. We're taking here an article about French feminism."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -65,21 +66,67 @@
        " 'Abstract_or': None}"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data = data_utils.get_item_by_id('10670%2F1.nxegh0')\n",
-    "data\n"
+    "data"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the rest of evaluation, we will be dealing with sample of data from different language. We will start by getting a sample of data (keywords with title and abstract to experiment with). We will do this by using the function get_sample. The function allows you to decide the size of the sample and the languages included in the sample (each language will be equally represented in the sample). Let's try with English, French and Portuguese. Please, check the file data_utils.py if you are interested in more detail about the function. "
+    "Suppose now that we want to apply our tool to an article which is not in the GoTriple platform. The following is an interactive function which asks you to insert your own article data, and automatically formats the data you entered in a way that is suitable for the tool functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = data_utils.get_item_from_user()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Language': 'fr',\n",
+       " 'Id': None,\n",
+       " 'Keywords': ['anthropologie',\n",
+       "  'France',\n",
+       "  'politique',\n",
+       "  'représentation',\n",
+       "  'image'],\n",
+       " 'Title_eng': 'Most of the images of France',\n",
+       " 'Title_or': 'Du French kiss au French Feminism',\n",
+       " 'Abstract_eng': 'unknown',\n",
+       " 'Abstract_or': 'unknown'}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For the rest of this tutorial, we will now deal with articles from the GoTriple platform. In the rest of evaluation, we will be dealing with sample of data from different language. We will start by getting a sample of data (keywords with title and abstract to experiment with). We will do this by using the function get_sample. The function allows you to decide the size of the sample and the languages included in the sample (each language will be equally represented in the sample). Let's try with English, French and Portuguese. Please, check the file data_utils.py if you are interested in more detail about the function. "
    ]
   },
   {
@@ -131,29 +178,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'Form': 'Dravidian Kinship',\n",
-       "  'DBPediaURI': 'http://dbpedia.org/resource/Kinship_terminology',\n",
-       "  'WikidataURI': ['http://www.wikidata.org/entity/Q2305447']},\n",
-       " {'Form': 'Africa',\n",
-       "  'DBPediaURI': 'http://dbpedia.org/resource/Africa',\n",
-       "  'WikidataURI': ['http://www.wikidata.org/entity/Q15',\n",
-       "   'http://www.wikidata.org/entity/Q181238',\n",
-       "   'http://www.wikidata.org/entity/Q4689536']},\n",
-       " {'Form': 'Evolutionism',\n",
-       "  'DBPediaURI': 'http://dbpedia.org/resource/Evolutionism',\n",
-       "  'WikidataURI': ['http://www.wikidata.org/entity/Q1076026']},\n",
-       " {'Form': 'Historicism',\n",
-       "  'DBPediaURI': 'http://dbpedia.org/resource/Historicism',\n",
-       "  'WikidataURI': ['http://www.wikidata.org/entity/Q460501']}]"
+       "[{'Form': 'anthropologie',\n",
+       "  'DBPediaURI': 'http://fr.dbpedia.org/resource/Anthropologie',\n",
+       "  'WikidataURI': None},\n",
+       " {'Form': 'France',\n",
+       "  'DBPediaURI': 'http://fr.dbpedia.org/resource/France',\n",
+       "  'WikidataURI': None}]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,13 +401,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "\n",
-    "os.environ['OPENAI_API_KEY'] = \"YOUR_KEY\"\n",
+    "os.environ['OPENAI_API_KEY'] = \"YOUR OPENAI KEY HERE\"\n",
     "client = tools_utils.openAI_authentication(os.environ.get(\"OPENAI_API_KEY\"))"
    ]
   },
@@ -381,29 +420,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<s>[INST] {Map each keyword to one or more relevant WikiData entities.\n",
+      "        Keywords are from a scientific article. \n",
+      "        The keyword list is: anthropologie, France, politique, représentation, image. \n",
+      "        An example of answer for the list of keywords: literary life, literary fact, doing things\n",
+      "        is: literary life: [literature]; literary fact: [literature], [fact]; doing things: [activity]\n",
+      "        Please, don't match keywords to the code of WikiData entities (e.g., Q123456), but to the entity name.\n",
+      "        INCLUDE EACH SEPARATE ENTITY BETWEEN [] IN THE ANSWER } [/INST]\n",
+      "    \n",
+      "anthropologie: [anthropology]; France: [France]; politique: [politics]; représentation: [representation], [depiction]; image: [image], [representation]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[{'Keyword': 'Dravidian people',\n",
-       "  'URI': 'http://www.wikidata.org/entity/Q69798'},\n",
-       " {'Keyword': 'kinship', 'URI': 'http://www.wikidata.org/entity/Q171318'},\n",
-       " {'Keyword': 'Africa', 'URI': 'http://www.wikidata.org/entity/Q15'},\n",
-       " {'Keyword': 'evolutionism', 'URI': 'http://www.wikidata.org/entity/Q1076026'},\n",
-       " {'Keyword': 'theory of evolution',\n",
-       "  'URI': 'http://www.wikidata.org/entity/Q11640129'},\n",
-       " {'Keyword': 'historicism', 'URI': 'http://www.wikidata.org/entity/Q277466'}]"
+       "[{'Keyword': 'anthropology', 'URI': 'http://www.wikidata.org/entity/Q23404'},\n",
+       " {'Keyword': 'France', 'URI': 'http://www.wikidata.org/entity/Q142'},\n",
+       " {'Keyword': 'politics', 'URI': 'http://www.wikidata.org/entity/Q7163'},\n",
+       " {'Keyword': 'representation',\n",
+       "  'URI': 'http://www.wikidata.org/entity/Q4393498'},\n",
+       " {'Keyword': 'depiction', 'URI': 'http://www.wikidata.org/entity/Q115491052'},\n",
+       " {'Keyword': 'image', 'URI': 'http://www.wikidata.org/entity/Q478798'},\n",
+       " {'Keyword': 'representation',\n",
+       "  'URI': 'http://www.wikidata.org/entity/Q4393498'}]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "output = main_functions.useOpenAILLM(test_item_en, \"gpt-3.5-turbo\", \"Title\", client)\n",
+    "output = main_functions.useOpenAILLM(test_item_en, \"gpt-4o-mini\", \"Title\", client)\n",
     "output"
    ]
   },
