Added Groq API integration

--- a/test_notebook.ipynb
+++ b/test_notebook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -18,12 +18,14 @@
        "<module 'main_functions' from 'c:\\\\Users\\\\paolo\\\\Desktop\\\\T3.4.1_KeywordsTranslation\\\\main_functions.py'>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import os\n",
+    "\n",
     "import main_functions\n",
     "import data_utils\n",
     "import tools_utils\n",
@@ -131,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +398,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, we will experiment with a proprietary OpenAI model. Authentication is required to use the OpenAI API. The following code block allows authentication (please insert your OpenAI key)"
+    "Now, we will experiment with a proprietary OpenAI model. Authentication is required to use the OpenAI API. The following code block allows authentication (please insert your OpenAI key)"
    ]
   },
   {
@@ -505,6 +507,81 @@
     "output = main_functions.useOpenAILLM(test_item_fr, \"gpt-3.5-turbo\", \"Title\", client)\n",
     "output"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The tool also integrate efficient use of open source LLMs via Groq API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.environ['GROQ_KEY'] = \"YOUR GROQ KEY HERE\"\n",
+    "groq_client = tools_utils.groq_authentication(os.environ.get(\"GROQ_KEY\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we are authenticated, we can experiment with open models with the Groq API. As can be seen, the function available to use the model allows to choose the model. In this example, we will make use of a light model, llama-3.2-3b. As can be seen, the results are promising, which suggests that smaller open models could be a good fit for this task"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output = main_functions.useGroqLLM(test_item_fr, \"llama-3.2-3b-preview\", \"Title\", groq_client)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'Keyword': 'Femicide', 'URI': 'http://www.wikidata.org/entity/Q1342425'},\n",
+       " {'Keyword': 'Violence Against Women',\n",
+       "  'URI': 'http://www.wikidata.org/entity/Q1800556'},\n",
+       " {'Keyword': 'Femicide', 'URI': 'http://www.wikidata.org/entity/Q1342425'},\n",
+       " {'Keyword': 'Violence Against Women',\n",
+       "  'URI': 'http://www.wikidata.org/entity/Q1800556'},\n",
+       " {'Keyword': 'Legislation', 'URI': 'http://www.wikidata.org/entity/Q49371'},\n",
+       " {'Keyword': 'Law', 'URI': 'http://www.wikidata.org/entity/Q7748'},\n",
+       " {'Keyword': 'Policy', 'URI': 'http://www.wikidata.org/entity/Q1156854'},\n",
+       " {'Keyword': 'Suppression', 'URI': 'http://www.wikidata.org/entity/Q23056310'},\n",
+       " {'Keyword': 'Repression', 'URI': 'http://www.wikidata.org/entity/Q106781680'},\n",
+       " {'Keyword': 'Oppression', 'URI': 'http://www.wikidata.org/entity/Q252000'},\n",
+       " {'Keyword': 'Prevention', 'URI': 'http://www.wikidata.org/entity/Q1717246'},\n",
+       " {'Keyword': 'Preventive medicine',\n",
+       "  'URI': 'http://www.wikidata.org/entity/Q1773974'},\n",
+       " {'Keyword': 'Public health', 'URI': 'http://www.wikidata.org/entity/Q189603'}]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
